--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/bulma": "^1.2.3",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0"
