more bugs fixed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate --no-lock"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -17,7 +17,8 @@
     "@nuxtjs/bulma": "^1.2.3",
     "cross-env": "^5.2.0",
     "nuxt": "^2.5.1",
-    "three": "^0.103.0"
+    "three": "^0.103.0",
+    "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^0.1.2",
