--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tsb-citylab-microsite-nuxt",
   "version": "1.0.0",
-  "description": "My pioneering Nuxt.js project",
+  "description": "Berlins Zukunft gemeinsam gestalten.",
   "author": "fdnklg",
   "private": true,
   "scripts": {
