--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,11 @@ sw.*
 .DS_STORE
 .DS_Store
 static/.DS_Store
+.DS_Store
+assets/.DS_Store
+static/.DS_Store
+static/images/.DS_Store
+static/images/.DS_Store
+static/.DS_Store
+assets/.DS_Store
+.DS_Store
