--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate --no-lock",
+    "generate": "nuxt generate",
     "analyze": "nuxt build --analyze --no-lock",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
