--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,7 @@
         "statusBarItem.hoverBackground": "#008bb3",
         "statusBar.foreground": "#15202b"
     },
-    "peacock.color": "#00b3e6"
+    "peacock.color": "#00b3e6",
+    "editor.fontLigatures": true,
+    "editor.fontFamily": "FiraCode-Retina"
 }
