--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@nuxtjs/bulma": "^1.2.3",
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
+    "fs": "0.0.1-security",
+    "ics": "^2.16.0",
+    "net": "^1.0.2",
     "nuxt": "^2.5.1",
     "nuxt-compress": "^1.0.2",
     "nuxt-fontawesome": "^0.4.0",
