--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-compress": "^1.0.2",
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.103.0",
+    "v-lazy-image": "^1.3.2",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
