--- a/package.json
+++ b/package.json
@@ -29,14 +29,22 @@
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "@nuxtjs/style-resources": "^0.1.2",
+    "@vue/test-utils": "^1.0.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.0.1",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^2.0.0",
     "glob-all": "^3.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
+    "jest": "^26.0.1",
+    "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.13.1",
     "nodemon": "^1.19.4",
     "purgecss-webpack-plugin": "^1.6.0",
-    "sass-loader": "^7.3.1"
+    "sass-loader": "^7.3.1",
+    "vue-jest": "^3.0.5"
   }
 }
