test(setup): add test command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "analyze": "nuxt build --analyze --no-lock"
+    "analyze": "nuxt build --analyze --no-lock",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
