--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@nuxtjs/style-resources": "^0.1.2",
+    "@testing-library/jest-dom": "5.9.0",
+    "@testing-library/vue": "5.0.4",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.0.1",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^2.0.0",
+    "eslint": "7.2.0",
     "glob-all": "^3.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "jest": "^26.0.1",
