--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,15 @@
         "statusBar.border": "#00b3e6",
         "titleBar.border": "#00b3e6"
     },
-    "peacock.color": "#00b3e6"
+    "peacock.color": "#00b3e6",
+    "editor.formatOnType": false,
+    "[vue]": {
+      "editor.formatOnSave": false,
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[javascript]": {
+      "editor.formatOnSave": false,
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
