--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "npm run export",
+    "build:nuxt":"nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "preexport": "nuxt build --target static",
