--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "npm run export",
+    "build:nuxt": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "preexport": "nuxt build --target static",
+    "export": "nuxt export",
     "analyze": "nuxt build --analyze --no-lock",
     "test": "jest",
     "test:watch": "jest --watch ----coverage=false"
