--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hard-source-webpack-plugin": "0.13.1",
     "jest": "26.0.1",
     "jest-serializer-vue": "2.0.2",
+    "node-fetch": "2.6.0",
     "node-sass": "4.14.1",
     "nodemon": "1.19.4",
     "purgecss-webpack-plugin": "1.6.0",
