adds nuxt module to scrape urls and load from data (#93)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "preexport": "nuxt build --target static",
     "export": "nuxt export",
     "analyze": "nuxt build --analyze --no-lock",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
     "test:watch": "jest --watch ----coverage=false"
   },
@@ -39,18 +41,28 @@
     "@testing-library/vue": "5.0.4",
     "@vue/test-utils": "1.0.3",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.1.0",
     "babel-jest": "26.0.1",
     "brotli-webpack-plugin": "1.1.0",
     "compression-webpack-plugin": "2.0.0",
     "eslint": "7.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-jest": "23.18.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-vue": "6.2.2",
     "glob-all": "3.2.1",
     "hard-source-webpack-plugin": "0.13.1",
     "jest": "26.0.1",
     "jest-serializer-vue": "2.0.2",
+    "msw": "0.19.5",
+    "node-fetch": "2.6.0",
     "node-sass": "4.14.1",
     "nodemon": "1.19.4",
+    "prettier": "2.0.5",
     "purgecss-webpack-plugin": "1.6.0",
     "sass-loader": "7.3.1",
-    "vue-jest": "3.0.5"
+    "vue-jest": "3.0.5",
+    "whatwg-fetch": "3.2.0"
   }
 }
