--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "glob-all": "3.2.1",
     "hard-source-webpack-plugin": "0.13.1",
     "jest": "26.0.1",
+    "jest-in-case": "1.0.2",
     "jest-serializer-vue": "2.0.2",
     "msw": "0.19.5",
     "node-fetch": "2.6.0",
