--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "npm run export",
+    "build": "npm run generate",
     "build:nuxt": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
