--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,9 @@
 * @dnsos
+
+static/images/docs/ @lucasoeth
+static/images/downloads/ @lucasoeth
+static/images/events/ @lucasoeth
+static/images/projects/ @lucasoeth
+
+assets/content.js @lucasoeth
+assets/content/* @lucasoeth
