--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [14.17.5]
 
     steps:
     - uses: actions/checkout@v2
