--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuxt": "2.15.7",
     "nuxt-compress": "5.0.0",
     "nuxt-fontawesome": "0.4.0",
+    "sass": "1.38.2",
     "v-lazy-image": "1.4.0",
     "vue-typed-js": "0.1.2"
   },
@@ -60,7 +61,6 @@
     "jest-in-case": "1.0.2",
     "jest-serializer-vue": "2.0.2",
     "msw": "0.19.5",
-    "node-sass": "4.14.1",
     "nodemon": "2.0.4",
     "nuxt-purgecss": "1.0.0",
     "prettier": "2.0.5",
